--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     </head>
     <body>
         <div style="position:relative; top:380px;">
-        <img src="/Users/jj/Desktop/gp/logo.png" style="width:100px; display: block; margin: 0px auto;">
-        <img src="/Users/jj/Desktop/gp/text.png" style="width:300px; display: block; margin: 0px auto;">
+        <img src="./logo.png" style="width:100px; display: block; margin: 0px auto;">
+        <img src="./text.png" style="width:300px; display: block; margin: 0px auto;">
         </div>
     </body>
 </html>
